src/test/deca/context/invalid/class/field_not_visible.deca
// Description:
// 	  use new declaration in a method of an undefined type 
//
// Resultats:
//  CANNOT_ACCESS_PROTECTED_FIELD: The protected field x cannot be accessed from main
//  line 21
// Historique:
// 	  cree le 15/01/2023

class B {
    
    protected float x;

    int methodB() {
        this.x = 1;
        return 2;
    }
}
{
    B objectB = new B();
    objectB.x = 1.2;
}
